--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -49,13 +49,13 @@ runs:
         cd ../../
       shell: bash
 
-    - name: Wait for first node to start
+    - name: Wait for partner-chains-node-1 to start
       id: wait-pc-node
       continue-on-error: true
       run: |
         # Wait for the Cardano node to be ready
         while ! docker exec cardano-node-1 [ -e /shared/cardano.ready ]; do sleep 1; done
-        echo "Cardano network is ready! Waiting for Partner Chain first node to start..."
+        echo "Cardano network is ready! Waiting for partner-chains-node-1 to start..."
         INIT_TIMESTAMP=$(docker exec cardano-node-1 cat /shared/cardano.start)
         echo "INIT_TIMESTAMP=$INIT_TIMESTAMP" >> $GITHUB_ENV
 
@@ -63,31 +63,24 @@ runs:
         restart_count=0
         max_restarts=10
 
-        # Set the container name based on test type
-        if [ "${{ inputs.markers }}" = "wizards" ]; then
-          CONTAINER_NAME="partner-chains-node-1"
-        else
-          CONTAINER_NAME="partner-chains-node-1"
-        fi
-
-        # Wait for the Partner Chain node to be ready or until max restarts or epoch 2 is reached
-        while ! docker exec $CONTAINER_NAME [ -e /shared/$CONTAINER_NAME.ready ]; do
+        # Wait for partner-chains-node-1 to be ready or until max restarts or epoch 2 is reached
+        while ! docker exec partner-chains-node-1 [ -e /shared/partner-chains-node-1.ready ]; do
           epoch=$(docker exec cardano-node-1 cardano-cli latest query tip --testnet-magic 42 | jq -r .epoch)
           echo "Epoch: $epoch"
-          container_status=$(docker inspect -f '{{.State.Status}}' $CONTAINER_NAME)
+          container_status=$(docker inspect -f '{{.State.Status}}' partner-chains-node-1)
           echo "Container status: $container_status"
           if [ "$container_status" = "restarting" ]; then
             restart_count=$((restart_count + 1))
-            echo "$CONTAINER_NAME is restarting ($restart_count/$max_restarts)"
+            echo "partner-chains-node-1 is restarting ($restart_count/$max_restarts)"
             if [ "$restart_count" -ge "$max_restarts" ]; then
-              echo "$CONTAINER_NAME has restarted $restart_count times. Failing early."
+              echo "partner-chains-node-1 has restarted $restart_count times. Failing early."
               exit 1
             fi
           else
             restart_count=0
           fi
-          if [ "$epoch" -ge 1 ]; then
-            echo "Epoch has reached 1 and $CONTAINER_NAME is still not ready."
+          if [ "$epoch" -ge 2 ]; then
+            echo "Epoch has reached 2 and partner-chains-node-1 is still not ready."
             exit 1
           fi
           sleep 10
