--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -114,14 +114,14 @@ runs:
       shell: bash
       run: |
         echo "Copy test results from docker container"
-        mkdir -p e2e-tests
-        docker cp tests:/e2e-tests/logs e2e-tests
+        mkdir -p e2e-tests/${{ inputs.markers }}
+        docker cp tests:/e2e-tests/logs e2e-tests/${{ inputs.markers }}
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results
-        path: e2e-tests/logs
+        name: test-results-${{ inputs.markers }}
+        path: e2e-tests/${{ inputs.markers }}/logs
         overwrite: true
         if-no-files-found: error
         include-hidden-files: true
