fix: check skipped tests

--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -180,9 +180,8 @@ runs:
         local-environment: "true"
 
     - name: Check if no skipped tests
-      if: ${{ inputs.markers == 'full' || inputs.markers == 'ariadne' }}
       run: |
-        skipped=$(jq -r .summary.skipped e2e-tests/logs/.report.json)
+        skipped=$(jq -r .summary.skipped e2e-tests/${{ inputs.markers }}/.report.json)
         if [ "$skipped" != "null" ]; then
           echo "Skipped tests found: $skipped. Check test logs for more information."
           exit 1
