--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -181,7 +181,7 @@ runs:
 
     - name: Check if no skipped tests
       run: |
-        skipped=$(jq -r .summary.skipped e2e-tests/${{ inputs.markers }}/.report.json)
+        skipped=$(jq -r .summary.skipped e2e-tests/${{ inputs.markers }}/logs/.report.json)
         if [ "$skipped" != "null" ]; then
           echo "Skipped tests found: $skipped. Check test logs for more information."
           exit 1
