--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -170,11 +170,13 @@ runs:
 
     - name: Check if no skipped tests
       run: |
-        skipped=$(jq -r .summary.skipped e2e-tests/${{ inputs.markers }}/logs/.report.json)
-        fi
-        if [ "$skipped" != "null" ]; then
-          echo "Skipped tests found: $skipped. Check test logs for more information."
-          exit 1
+        report_path="e2e-tests/${{ inputs.markers }}/logs/.report.json"
+        if [ -f "$report_path" ]; then
+          skipped=$(jq -r .summary.skipped "$report_path")
+          if [ "$skipped" != "null" ]; then
+            echo "Skipped tests found: $skipped. Check test logs for more information."
+            exit 1
+          fi
         fi
       shell: bash
 
