--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -123,7 +123,7 @@ hex-literal = { workspace = true }
 time-source = { workspace = true, features = ["mock"] }
 assert_cmd = { workspace = true }
 sp-native-token-management = { workspace = true, features = ["mock"] }
-pallet-sidechain-rpc = { workspace = true, features = ["mock"] }
+pallet-sidechain-rpc = { workspace = true }
 authority-selection-inherents = { workspace = true, features = ["mock"] }
 
 [features]
