ETCM-9854 - Local environment parrellelization

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -1,4 +1,5 @@
 name: 'Run Pytest Tests'
+
 description: 'Activate Python virtual environment and run end-to-end tests'
 
 inputs:
@@ -10,7 +11,7 @@ inputs:
     required: false
     default: 'test_'
   markers:
-    description: 'Run tests by markers (-m)'
+    description: 'Run tests by markers (-m). Available markers: smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards or full'
     required: false
   mc_epoch:
     description: 'MC epoch to test (committee tests)'
@@ -53,7 +54,9 @@ runs:
       shell: bash
       run: |
         markers_switch=""
-        if [ -n "${{ inputs.markers }}" ]; then
+        if [ "${{ inputs.markers }}" = "wizards" ]; then
+          markers_switch="-m smoke"
+        elif [ -n "${{ inputs.markers }}" ]; then
           markers_switch="-m '${{ inputs.markers }}'"
         fi
         
@@ -77,10 +80,10 @@ runs:
           decrypt_switch="--decrypt"
         fi
 
+        # Define pytest command
         pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
           --env '${{ inputs.env }}' \
           --log-cli-level '${{ inputs.log_level }}' \
-          -k '${{ inputs.keyword }}' \
           ${markers_switch} \
           -n '${{ inputs.threads}}' \
           --dist=loadgroup \
@@ -120,7 +123,7 @@ runs:
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results
+        name: test-results-${{ inputs.markers }}
         path: e2e-tests/logs
         overwrite: true
         if-no-files-found: error
