--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -10,8 +10,8 @@ inputs:
   tag:
     description: "PC Artifact Tag"
     required: true
-  tests:
-    description: "Test set to run (premerge or postmerge)"
+  markers:
+    description: 'Run tests by markers (-m). Available markers: smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards or full'
     required: true
 
 outputs: {}
@@ -23,31 +23,39 @@ runs:
       uses: actions/checkout@v4
       with:
         ref: ${{ inputs.sha }}
+
     - name: Acquire AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: ${{ env.AWS_ROLE_ARN_SECRET }}
         aws-region: ${{ env.AWS_REGION }}
+
     - name: Login to ECR
       uses: docker/login-action@v3
       with:
         registry: ${{ env.ECR_REGISTRY_SECRET }}
+
     - name: Deploy local environment
       run: |
         mkdir -p dev/local-environment/configurations/tests/e2e-tests
         cp -r e2e-tests/* dev/local-environment/configurations/tests/e2e-tests
         cd dev/local-environment
-        bash setup.sh --non-interactive --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
+        if [ "${{ inputs.markers }}" = "wizards" ]; then
+          bash setup.sh --non-interactive --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests -d 5
+        else
+          bash setup.sh --non-interactive --postgres-password azMpOp4mTqhlKDmgCVQr --node-image ${{ inputs.image }} --tests
+        fi
         docker compose up -d
         cd ../../
       shell: bash
+
     - name: Wait for partner-chains-node-1 to start
       id: wait-pc-node
       continue-on-error: true
       run: |
         # Wait for the Cardano node to be ready
         while ! docker exec cardano-node-1 [ -e /shared/cardano.ready ]; do sleep 1; done
-        echo "Cardano network is ready! Waiting for Partner Chain first node to start..."
+        echo "Cardano network is ready! Waiting for partner-chains-node-1 to start..."
         INIT_TIMESTAMP=$(docker exec cardano-node-1 cat /shared/cardano.start)
         echo "INIT_TIMESTAMP=$INIT_TIMESTAMP" >> $GITHUB_ENV
 
@@ -55,7 +63,7 @@ runs:
         restart_count=0
         max_restarts=10
 
-        # Wait for the Partner Chain node to be ready or until max restarts or epoch 2 is reached
+        # Wait for partner-chains-node-1 to be ready or until max restarts or epoch 2 is reached
         while ! docker exec partner-chains-node-1 [ -e /shared/partner-chains-node-1.ready ]; do
           epoch=$(docker exec cardano-node-1 cardano-cli latest query tip --testnet-magic 42 | jq -r .epoch)
           echo "Epoch: $epoch"
@@ -78,108 +86,118 @@ runs:
           sleep 10
         done
       shell: bash
+
     - name: Collect Docker logs
       run: |
-        mkdir -p local-environment-logs-initial
+        mkdir -p local-environment-${{ inputs.markers }}-logs-initial
         docker ps -a --format '{{.Names}}' | while read line; do
           echo "Collecting logs for container $line"
-          docker logs "$line" > "local-environment-logs-initial/$line.log" 2>&1 || true
+          docker logs "$line" > "local-environment-${{ inputs.markers }}-logs-initial/$line.log" 2>&1 || true
         done
       shell: bash
+
     - name: Upload Docker logs artifact
       uses: actions/upload-artifact@v4
       with:
-        name: local-environment-logs-initial
-        path: local-environment-logs-initial/
+        name: local-environment-${{ inputs.markers }}-logs-initial
+        path: local-environment-${{ inputs.markers }}-logs-initial/
+
     - name: Fail the job
       if: ${{ steps.wait-pc-node.outcome == 'failure' }}
       run: exit 1
       shell: bash
-    - name: Run smoke tests
-      uses: ./.github/actions/tests/run-e2e-tests
-      with:
-        env: ${{ env.TEST_ENVIRONMENT }}
-        keyword: "test_get_status or test_get_params"
-        blockchain: substrate
-        local-environment: "true"
-    - name: Wait for epoch 2
+
+    - name: Wait for Epoch 2
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 2
         deployment: docker
         node: cardano-node-1
         environment:
+
     - name: Let PC warm up
       run: |
         sleep 30
       shell: bash
-    - name: Run all tests (do not verify full MC epoch)
+
+    - name: Run Epoch 2 Tests
+      if: ${{ inputs.markers != 'full' && inputs.markers != 'ariadne' && inputs.markers != 'delegation_rewards' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
-        markers: "not probability and not rpc"
+        markers: ${{ inputs.markers }}
         local-environment: "true"
-    - name: Wait for epoch 3
-      if: ${{ inputs.tests == 'postmerge' }}
+
+    - name: Wait for Epoch 3
+      if: ${{ inputs.markers == 'full' || inputs.markers == 'ariadne' || inputs.markers == 'delegation_rewards' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 3
         deployment: docker
         node: cardano-node-1
         environment:
-    - name: Run all tests (do not verify full MC epoch)
-      if: ${{ inputs.tests == 'postmerge' }}
+
+    - name: Run Epoch 3 Tests
+      if: ${{ inputs.markers == 'full' || inputs.markers == 'ariadne' || inputs.markers == 'delegation_rewards' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
-        markers: "not probability"
+        markers: ${{ inputs.markers }}
         local-environment: "true"
-    - name: Wait for epoch 4
-      if: ${{ inputs.tests == 'postmerge' }}
+
+    - name: Wait for Epoch 4
+      if: ${{ inputs.markers == 'full' || inputs.markers == 'ariadne' }}
       uses: ./.github/actions/tests/wait-for-epoch
       with:
         epoch: 4
         deployment: docker
         node: cardano-node-1
         environment:
-    - name: Run all tests
-      if: ${{ inputs.tests == 'postmerge' }}
+
+    - name: Run Epoch 4 Tests
+      if: ${{ inputs.markers == 'full' || inputs.markers == 'ariadne' }}
       uses: ./.github/actions/tests/run-e2e-tests
       with:
         env: ${{ env.TEST_ENVIRONMENT }}
         mc_epoch: 3
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
-        markers: "not probability and not reserve"
+        markers: ${{ inputs.markers }}
         local-environment: "true"
+
     - name: Check if no skipped tests
-      if: ${{ inputs.tests == 'postmerge' }}
       run: |
-        skipped=$(jq -r .summary.skipped e2e-tests/logs/.report.json)
-        if [ "$skipped" != "null" ]; then
-          echo "Skipped tests found: $skipped. Check test logs for more information."
-          exit 1
+        report_path="e2e-tests/${{ inputs.markers }}/logs/.report.json"
+        if [ -f "$report_path" ]; then
+          skipped=$(jq -r .summary.skipped "$report_path")
+          if [ "$skipped" != "null" ]; then
+            echo "Skipped tests found: $skipped. Check test logs for more information."
+            exit 1
+          fi
         fi
       shell: bash
+
     - name: Collect container logs
       if: always()
       run: |
-        mkdir -p local-environment-logs-full
+        mkdir -p local-environment-${{ inputs.markers }}-logs-full
         docker ps -a --format '{{.Names}}' | while read line; do
           echo "Collecting logs for container $line"
-          docker logs "$line" > "local-environment-logs-full/$line.log" 2>&1 || true
+          docker logs "$line" > "local-environment-${{ inputs.markers }}-logs-full/$line.log" 2>&1 || true
         done
       shell: bash
+
     - name: Upload container logs
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: local-environment-logs-full
-        path: local-environment-logs-full/
+        name: local-environment-${{ inputs.markers }}-logs-full
+        path: local-environment-${{ inputs.markers }}-logs-full/
+
     - name: Stop partner-chains-demo
       run: |
         cd dev/local-environment
