--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,9 +89,13 @@ jobs:
             ./to-build/staging_preprod_chain_spec.json
 
   local-environment-tests:
+    continue-on-error: true
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
     needs: build-linux-x86_64-pre-merge
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        markers: [smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -104,7 +108,7 @@ jobs:
           tag: CI
           image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-linux-x86_64-pre-merge.outputs.sha }}
           sha: ${{ needs.build-linux-x86_64-pre-merge.outputs.sha }}
-          tests: premerge
+          markers: ${{ matrix.markers }}
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
           EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
@@ -116,21 +120,25 @@ jobs:
 
   local-environment-tests-alert:
     needs: local-environment-tests
-    if: always() && needs.local-environment-tests.result != 'skipped' && github.event_name == 'pull_request' && github.event.pull_request.merged == false
+    if: >-
+      always() && (
+        needs.local-environment-tests.result != 'skipped'
+      ) && github.event_name == 'pull_request' && github.event.pull_request.merged == false
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        markers: [smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - name: Create logs directory
-        run: mkdir -p e2e-tests/logs
       - name: Download test report
         uses: actions/download-artifact@v4
         with:
-          name: test-results
-          path: e2e-tests/logs
+          name: test-results-${{ matrix.markers }}
+          path: e2e-tests/logs-${{ matrix.markers }}
       - name: Report to slack
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -142,7 +150,11 @@ jobs:
           env: local-pre-merge
         run: |
           cd e2e-tests
-          ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
+          # Ensure logs directory exists
+          mkdir -p logs
+          # Copy downloaded artifacts to where the script expects them, including hidden files
+          cp -r logs-${{ matrix.markers }}/. logs/
+          ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null "${{ matrix.markers }}"
         shell: bash
 
   devshell-tests:
@@ -211,7 +223,13 @@ jobs:
 
   pre-merge-checks-complete:
     if: ${{ always() && github.event_name == 'pull_request' && github.event.pull_request.merged == false }}
-    needs: [build-linux-x86_64-pre-merge, local-environment-tests, devshell-tests, upload-chain-specs-pre-merge, documentation-tests]
+    needs: [
+      build-linux-x86_64-pre-merge,
+      local-environment-tests,
+      devshell-tests,
+      upload-chain-specs-pre-merge,
+      documentation-tests
+    ]
     runs-on: ubuntu-latest
     steps:
       - name: Check if any needed job failed
@@ -461,7 +479,7 @@ jobs:
           tag: CI
           image: ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ needs.build-linux-x86_64-post-merge.outputs.sha }}
           sha: ${{ needs.build-linux-x86_64-post-merge.outputs.sha }}
-          tests: postmerge
+          markers: full
         env:
           SUBSTRATE_REPO_SSH_KEY: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
           EARTHLY_TAR: ${{ secrets.EARTHLY_TAR }}
@@ -475,19 +493,20 @@ jobs:
     needs: local-environment-tests-post-merge
     if: always() && needs.local-environment-tests-post-merge.result != 'skipped'
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        markers: [smoke, rpc, reserve, governed_map, delegator_rewards, ariadne, wizards]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: master
-      - name: Create logs directory
-        run: mkdir -p e2e-tests/logs
       - name: Download test report
         uses: actions/download-artifact@v4
         with:
-          name: test-results
-          path: e2e-tests/logs
+          name: test-results-${{ matrix.markers }}
+          path: e2e-tests/logs-${{ matrix.markers }}
       - name: Report to slack
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -499,7 +518,11 @@ jobs:
           env: local-post-merge
         run: |
           cd e2e-tests
-          ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null
+          # Ensure logs directory exists
+          mkdir -p logs
+          # Copy downloaded artifacts to where the script expects them, including hidden files
+          cp -r logs-${{ matrix.markers }}/. logs/
+          ./report_slack.sh $repository $slack_ref_name $job_url $env $github_actor_username null "${{ matrix.markers }}"
         shell: bash
 
   deploy-ci-preview:
@@ -548,40 +571,12 @@ jobs:
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
           K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-#      - name: Run direct kubectl exec tests against ci-preview
-#        uses: ./.github/actions/tests/k8s-direct-tests
-#        with:
-#          namespace: ci-preview
-#          pod: ci-preview-validator-1
-#        env:
-#          AWS_REGION: "eu-central-1"
-#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
       - name: Test against ci-preview
         uses: ./.github/actions/tests/run-e2e-tests
-#      - name: Run pytests against ci-preview over kubectl exec
-#        uses: ./.github/actions/tests/k8s-e2e-tests
         with:
           env: ci
           decrypt: true
           blockchain: substrate
-#        env:
-#          USE_KUBECTL_RPC: true
-#          KUBECTL_EXEC_POD: ci-preview-validator-1
-#          K8S_NAMESPACE: ci-preview
-#          AWS_REGION: "eu-central-1"
-#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 
   post-merge-actions-complete:
     if: ${{ always() && (github.event_name == 'pull_request' && github.event.pull_request.merged == true) }}
